<!--
  Copyright (C) 2010 Atlas of Living Australia
  All Rights Reserved.
   
  The contents of this file are subject to the Mozilla Public
  License Version 1.1 (the "License"); you may not use this file
  except in compliance with the License. You may obtain a copy of
  the License at http://www.mozilla.org/MPL/
   
  Software distributed under the License is distributed on an "AS
  IS" basis, WITHOUT WARRANTY OF ANY KIND, either express or
  implied. See the License for the specific language governing
  rights and limitations under the License.
-->
<resources>


    <string name="title_activity_mobile_field_data">@string/app_name</string>
    <string name="title_activity_mobile_data_dashboard">@string/app_name</string>
    
    <string name="submitButtonText">Save</string>
    <string name="species_label">Species</string>
    <string name="date_label">Date</string>
    <string name="comments_label">Comments</string>
    <string name="title_activity_select_location">Select a location</string>
    <string name="title_activity_location_selection">Select a location</string>
    <string name="title_species_selection">Select a species</string>
    <string name="title_species_list">Species List</string>
    <string name="title_activity_view_saved_records">Saved records</string>
    <string name="saveButtonText">Save</string>
    <string name="species_profile_image">Species profile image</string>
    <string name="change_date_button_text">Change</string>
    <string name="touch_to_select">Touch to select</string>
    <string name="no_location_supplied">No location supplied</string>
    <string name="no_photo">No photo selected</string>
    <string name="default_spinner_hint">Select an option</string>
    <string name="upon_login"></string>

    <!-- Dashboard -->
    <string name="new_record">New recording</string>
    <string name="survey_list_title">Downloaded Surveys</string>
    <string name="default_icon_description">This survey is the default survey</string>
    <string-array name="tab_titles">
        <item>Surveys</item>
        <item>Species</item>
        <item>Records</item>
    </string-array>
    
    
    <!--  Action Bar -->
    <string name="view_saved_records_description">View Saved Records</string>
    <string name="view_species_list_description">View Species List</string>
    <string name="new_record_description">New Record</string>
    
    <!-- Menu Text -->
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_save">Save</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_cancel">Cancel</string>

    <!-- Validation Errors -->
    <string name="validationMessage">Please answer the marked questions before continuing</string>
    <string name="futureDateMessage">The date cannot be in the future</string>
    <string name="requiredMessage">Please enter a value</string>
    <string name="no_saved_records_message">No saved records</string>
    <string name="saved_records_message">%s saved records</string>
    <string name="saved_record_message">1 saved record</string>
    <string name="initialisationErrorTitle">Initialisation error</string>
    <string name="initialisationError">Please ensure you have network access and the field data server at %s is running.</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="aboutMessage">Field Data mobile client 1.0\nAltas of Living Australia</string>
    <string name="title_activity_edit_preferences">Application Preferences</string>

    <!-- Location selection -->
    <string name="latitudeLabel">Latitude</string>
    <string name="longitudeLabel">Longitude</string>
    <string name="accuracyLabel">Accuracy</string>
    <string name="currentLocationLabel">GPS</string>
    <string name="mapLabel">Map</string>
    <string name="locationSelectedByGPS">Location set using GPS</string>
    <string name="mapHelp">Change the selected location by dragging the marker</string>
    <string name="markerHelp">Long press the map to add or move the marker to another location.  Use the marker icon in the action bar to select your current location.</string>
    <string name="noCurrentLocation">Your current location is not available.</string>

    <!-- Login page -->
    <string name="title_activity_login">Login</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registrationMessage">or</string>
    
    <string name="login_failed">Login Failed</string>
    <string name="unknown_user">Username unknown or incorrect password.</string>
    <string name="portal">Portal</string>
    
    <string name="menu_login">Change Login</string>
    <string name="title_activity_field_guide">View Field Guide</string>
    
    <!-- Survey pages -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    
	<!-- Saved records page -->
	<string name="photo_icon">Record photo</string>
	<string name="draft">Draft</string>
    <string name="drafts_error">Draft records cannot be uploaded.</string>

	<!-- species list menu items -->
	<string name="species_action_title">Species Action</string>
	<string name="record_observation">Record with %s survey</string>
	<string name="view_field_guide">View Field Guide&#8230;</string>
</resources>